--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,23 @@
+:root {
+  --color: rgb(157, 245, 157);
+  --color2: rgb(81, 240, 81);
+}
+
+body {
+  background-color: rgb(10, 10, 10);
+}
 .app {
-  text-align: center;
+  max-width: 500px;
+  margin: auto;
+  min-height: 100dvh;
+  background: radial-gradient(50% 30% at 50% 20%, rgb(34, 34, 34), rgb(10, 10, 10));
+}
+input, button {
+  outline: none;
+  border: none;
+  padding: 10px;
+  font-size: 1rem;
+}
+button:hover {
+  cursor: pointer;
 }
